scripts/k8s/instafix-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: instafix
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ddinstagram.com`)
      kind: Rule
      services:
        - name: instafix
          port: 3000
  tls:
    secretName: ddinstagram-com

---
apiVersion: v1
kind: Service
metadata:
  name: instafix
  labels:
    app: instafix
spec:
  selector:
    app: instafix
  ports:
    - port: 3000
